# mulle-stacktrace

./: .gitignore  .touch  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  mulle-stacktrace.sublime-project  package.json
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle-env/share/: environment-extension.sh
.mulle-sde/share/: extension
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-kempe.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: post-release.sh.sample
asset/dox/: TOC.md
assets/dox/: TOC.md
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/share/: Environment.cmake  LinkManifestC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  properties.plist  usage.md.bud
craftinfo/libbacktrace-craftinfo/: CMakeLists.txt  README.md
demo/: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  codebuff.json
demo/src/: demo-version.h  main-demo1.c
mulle-project/: formula-info.sh.sample  generate-formula.sh  publisher-info.sh.sample  version-info.sh
src/: _mulle-stacktrace-include-private.h  _mulle-stacktrace-include.h  include.h  mulle-stacktrace-backtrace.c  mulle-stacktrace-execinfo.c  mulle-stacktrace-nop.c  mulle-stacktrace-windows.c  mulle-stacktrace.c  mulle-stacktrace.h
src/reflect/: _mulle-stacktrace-include-private.h  _mulle-stacktrace-include.h  _mulle-stacktrace-versioncheck.h
(+19 files in other folders)
